added extra info

--- a/.env_example
+++ b/.env_example
@@ -13,3 +13,10 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHANNEL_ID =
 PAYME_LOGIN =
 PAYME_PASSWORD =
+PAYME_PASSWORD_TEST =
+CLICK_SERVICE_ID =
+CLICK_MERCHANT_ID =
+CLICK_SECRET_KEY =
+CLICK_MERCHANT_USER_ID =
+UZUM_LOGIN =
+UZUM_PASSWORD =
